# Edu

./: .gitignore  .replit  MINI_APP_SETUP.md  bot.db  config.py  main.py  pyproject.toml  replit.md  simple_test.html  test_webapp.html  translations.py  webapp_server.py
attached_assets/: pptx_template_Modern_Business_Plan_1755805435826.pptx
bot/: keyboards.py  middlewares.py  states.py
database/: database.py  models.py
generated_documents/: independent_work_20250804_123726.docx  independent_work_20250804_125058.docx  independent_work_20250805_180028.docx  independent_work_20250805_181552.docx  independent_work_20250805_184248.docx  independent_work_20250809_065201.docx  independent_work_20250822_034254.docx  independent_work_20250822_041134.docx  independent_work_20250822_070834.docx  new_presentation_20250821_210418.pptx  new_presentation_20250821_212006.pptx  new_presentation_20250821_213950.pptx  new_presentation_20250821_215626.pptx  new_presentation_20250821_224833.pptx  new_presentation_20250823_040756.pptx  new_presentation_20250823_041133.pptx  presentation_20250821_193237.pptx  presentation_20250821_193336.pptx  presentation_20250821_195637.pptx  presentation_20250821_202441.pptx  presentation_20250821_202854.pptx  presentation_20250821_203504.pptx  referat_20250822_033718.docx  referat_20250822_034052.docx  referat_20250822_064415.docx  template_Ish Stoli_20250823_112221.pptx  template_Minimalist_20250823_105502.pptx
services/: ai_service.py  ai_service_new.py  channel_service.py  document_service.py  document_service_new.py  payment_service.py  (+2 more)
(+9 files in other folders)
