[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp-cors>=0.8.1",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "openai>=1.98.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
